--- a/deno.json
+++ b/deno.json
@@ -5,6 +5,7 @@
 		"@cross/dir": "jsr:@cross/dir@^1.1.0",
 		"@db/sqlite": "jsr:@db/sqlite@^0.12.0",
 		"@std/ini": "jsr:@std/ini@^0.225.2",
+		"@std/io": "jsr:@std/io@^0.225.0",
 		"@std/path": "jsr:@std/path@^1.0.8"
 	}
 }
